jump to use Junit 5.9.2 Juniper version and Mockito 5.9.2 - huge test refactor